--- a/log4j.properties
+++ b/log4j.properties
@@ -37,11 +37,12 @@ log4j.logger.org.voltdb.client=INFO
 log4j.logger.org.voltdb.compiler=INFO
 log4j.logger.org.voltdb.planner=INFO
 log4j.logger.org.voltdb.sysprocs=INFO
-log4j.logger.org.voltdb.sysprocs.SnapshotSave=INFO
-#log4j.logger.org.voltdb.SnapshotSaveAPI=TRACE
-log4j.logger.org.voltdb.SnapshotSiteProcessor=TRACE
+log4j.logger.org.voltdb.sysprocs.SnapshotSave=TRACE
+log4j.logger.org.voltdb.SnapshotSaveAPI=TRACE
+log4j.logger.org.voltdb.SnapshotSiteProcessor=INFO
 log4j.logger.org.voltdb.DefaultSnapshotDataTarget=TRACE
 log4j.logger.org.voltdb.sysprocs.SnapshotDelete=TRACE
+log4j.logger.org.voltdb.sysprocs.SnapshotRestore=TRACE
 
 ## Research Projects
 log4j.logger.edu.brown.hstore.estimators=INFO
