Getting partitioned table restore to work

--- a/log4j.properties
+++ b/log4j.properties
@@ -20,7 +20,10 @@ log4j.logger.edu.brown.hstore.PartitionLockQueue=INFO
 log4j.logger.edu.brown.hstore.BatchPlanner=INFO
 log4j.logger.edu.brown.hstore.AntiCacheManager=INFO
 log4j.logger.edu.brown.hstore.txns=INFO
+#log4j.logger.edu.brown.hstore.txns.DependencyTracker=DEBUG
+log4j.logger.edu.brown.hstore.txns.DependencyInfo=INFO
 log4j.logger.edu.brown.hstore.txns.DependencyTracker=INFO
+log4j.logger.edu.brown.hstore.txns.LocalTransaction=INFO
 log4j.logger.edu.brown.hstore.callbacks=INFO
 log4j.logger.edu.brown.hstore.handlers=INFO
 log4j.logger.edu.brown.hstore.dispatchers=INFO
@@ -43,6 +46,8 @@ log4j.logger.org.voltdb.SnapshotSiteProcessor=TRACE
 log4j.logger.org.voltdb.DefaultSnapshotDataTarget=TRACE
 log4j.logger.org.voltdb.sysprocs.SnapshotDelete=TRACE
 log4j.logger.org.voltdb.sysprocs.SnapshotRestore=TRACE
+log4j.logger.org.voltdb.sysprocs.saverestore.PartitionedTableSaveFileState=TRACE
+log4j.logger.org.voltdb.sysprocs.saverestore.ReplicatedTableSaveFileState=TRACE
 
 ## Research Projects
 log4j.logger.edu.brown.hstore.estimators=INFO
