Partitioned table restore still works only partly - issue is actually due to SnapshotSiteProcessor not completing SnapshotTasks on all sites - SnapshotRestore works perfectly fine

--- a/log4j.properties
+++ b/log4j.properties
@@ -32,21 +32,25 @@ log4j.logger.edu.brown.hstore.conf=INFO
 log4j.logger.edu.brown.catalog=INFO
 log4j.logger.edu.brown.utils=INFO
 
+
 ## VoltDB Stuff
 log4j.logger.org.voltdb.VoltProcedure=INFO
-log4j.logger.org.voltdb.VoltSystemProcedure=INFO
+log4j.logger.org.voltdb.VoltSystemProcedure=TRACE
 log4j.logger.org.voltdb.client=INFO
 log4j.logger.org.voltdb.compiler=INFO
 log4j.logger.org.voltdb.planner=INFO
 log4j.logger.org.voltdb.sysprocs=INFO
+log4j.logger.org.voltdb.sysprocs.LoadMultipartitionTable=TRACE
 log4j.logger.org.voltdb.sysprocs.SnapshotSave=TRACE
 log4j.logger.org.voltdb.SnapshotSaveAPI=TRACE
 log4j.logger.org.voltdb.SnapshotSiteProcessor=TRACE
-log4j.logger.org.voltdb.DefaultSnapshotDataTarget=TRACE
+log4j.logger.org.voltdb.DefaultSnapshotDataTarget=INFO
 log4j.logger.org.voltdb.sysprocs.SnapshotDelete=TRACE
 log4j.logger.org.voltdb.sysprocs.SnapshotRestore=TRACE
-log4j.logger.org.voltdb.sysprocs.saverestore.PartitionedTableSaveFileState=TRACE
-log4j.logger.org.voltdb.sysprocs.saverestore.ReplicatedTableSaveFileState=TRACE
+log4j.logger.org.voltdb.sysprocs.SnapshotRestoreLocal=TRACE
+#log4j.logger.org.voltdb.sysprocs.saverestore.PartitionedTableSaveFileState=TRACE
+#log4j.logger.org.voltdb.sysprocs.saverestore.ReplicatedTableSaveFileState=TRACE
+
 
 ## Research Projects
 log4j.logger.edu.brown.hstore.estimators=INFO
