WAL write+read stuff works for YCSB

--- a/log4j.properties
+++ b/log4j.properties
@@ -26,7 +26,9 @@ log4j.logger.edu.brown.hstore.txns.LocalTransaction=INFO
 log4j.logger.edu.brown.hstore.callbacks=INFO
 log4j.logger.edu.brown.hstore.handlers=INFO
 log4j.logger.edu.brown.hstore.dispatchers=INFO
-log4j.logger.edu.brown.hstore.cmdlog=INFO
+log4j.logger.edu.brown.hstore.cmdlog.CommandLogWriter=TRACE
+log4j.logger.edu.brown.hstore.cmdlog.CommandLogReader=TRACE
+log4j.logger.edu.brown.hstore.cmdlog.LogEntry=TRACE
 
 log4j.logger.edu.brown.hstore.conf=INFO
 log4j.logger.edu.brown.catalog=INFO
