Added basic undo log (WAL) to existing redo log

--- a/log4j.properties
+++ b/log4j.properties
@@ -26,7 +26,7 @@ log4j.logger.edu.brown.hstore.txns.LocalTransaction=INFO
 log4j.logger.edu.brown.hstore.callbacks=INFO
 log4j.logger.edu.brown.hstore.handlers=INFO
 log4j.logger.edu.brown.hstore.dispatchers=INFO
-log4j.logger.edu.brown.hstore.cmdlog.CommandLogWriter=TRACE
+log4j.logger.edu.brown.hstore.cmdlog.CommandLogWriter=INFO
 log4j.logger.edu.brown.hstore.cmdlog.CommandLogReader=TRACE
 log4j.logger.edu.brown.hstore.cmdlog.LogEntry=TRACE
 
@@ -43,15 +43,14 @@ log4j.logger.org.voltdb.compiler=INFO
 log4j.logger.org.voltdb.planner=INFO
 log4j.logger.org.voltdb.sysprocs=INFO
 log4j.logger.org.voltdb.sysprocs.LoadMultipartitionTable=INFO
-log4j.logger.org.voltdb.sysprocs.SnapshotSave=TRACE
-log4j.logger.org.voltdb.SnapshotSaveAPI=TRACE
-log4j.logger.org.voltdb.SnapshotSiteProcessor=TRACE
-log4j.logger.org.voltdb.DefaultSnapshotDataTarget=TRACE
-log4j.logger.org.voltdb.sysprocs.SnapshotDelete=TRACE
-log4j.logger.org.voltdb.sysprocs.SnapshotRestore=TRACE
-log4j.logger.org.voltdb.sysprocs.SnapshotRestoreLocal=TRACE
-log4j.logger.org.voltdb.sysprocs.saverestore.PartitionedTableSaveFileState=TRACE
-log4j.logger.org.voltdb.sysprocs.saverestore.ReplicatedTableSaveFileState=TRACE
+log4j.logger.org.voltdb.sysprocs.SnapshotSave=INFO
+log4j.logger.org.voltdb.SnapshotSaveAPI=INFO
+log4j.logger.org.voltdb.SnapshotSiteProcessor=INFO
+log4j.logger.org.voltdb.DefaultSnapshotDataTarget=INFO
+log4j.logger.org.voltdb.sysprocs.SnapshotDelete=INFO
+log4j.logger.org.voltdb.sysprocs.SnapshotRestore=INFO
+log4j.logger.org.voltdb.sysprocs.saverestore.PartitionedTableSaveFileState=INFO
+log4j.logger.org.voltdb.sysprocs.saverestore.ReplicatedTableSaveFileState=INFO
 
 
 ## Research Projects
