--- a/build.xml
+++ b/build.xml
@@ -863,6 +863,7 @@ NATIVE EE STUFF
         <arg value="STORAGE_MMAP=${site.storage_mmap}" />
         <arg value="STORAGE_MMAP_FILE_SIZE=${site.storage_mmap_file_size}" />
         <arg value="STORAGE_MMAP_SYNC_FREQUENCY=${site.storage_mmap_sync_frequency}" />
+        <arg value="ARIES=${site.aries}" />
         <arg value="ANTICACHE_ENABLE=${site.anticache_enable}" />
         <arg value="ANTICACHE_BUILD=${site.anticache_build}" />
         <arg value="ANTICACHE_REVERSIBLE_LRU=${site.anticache_reversible_lru}" />
