--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -7,12 +7,12 @@ workload.ignore     = LoadWarehouse,LoadWarehouseReplicated
 
 ## These parameters will make the benchmark use one WAREHOUSE
 ## and one loader thread per partition in the cluster
-warehouse_per_partition = true
+warehouse_per_partition = false
 loadthread_per_warehouse = true
 
 ## Or you can use these parameters to specifically
 ## control the number of warehouses and/or load threads
-# warehouses = 4
+warehouses = 100
 # loadthreads = 4
 
 ## Testing Options
@@ -42,7 +42,7 @@ neworder_only           = false
 
 # Whether to allow NewOrder txns to touch multiple partitions
 # You can control the percentage of these txns with neworder_multip_mix
-neworder_multip         = true
+neworder_multip         = false
 
 # The percentage of NewOrder txns that touch multiple partitions.
 # Setting it to -1 will use the default configuration
@@ -64,7 +64,7 @@ neworder_skew_warehouse = false
 payment_only            = false
 
 # Whether to allow Payment txns to touch multiple partitions.
-payment_multip          = true
+payment_multip          = false
 
 # The percentage of Payment txns that touch multiple partitions.
 # Setting it to -1 will use the default configuration
