Snapshot before removing VARBINARY

--- a/log4j.properties
+++ b/log4j.properties
@@ -36,7 +36,7 @@ log4j.logger.edu.brown.utils=INFO
 
 
 ## VoltDB Stuff
-log4j.logger.org.voltdb.VoltProcedure=INFO
+log4j.logger.org.voltdb.VoltProcedure=WARN
 log4j.logger.org.voltdb.VoltSystemProcedure=INFO
 log4j.logger.org.voltdb.client=INFO
 log4j.logger.org.voltdb.compiler=INFO
