update the InputClient to support batchs, TBD: 1- parameter parsing; 2- metrics collection; 3-word generation part

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -97,5 +97,9 @@ site.commandlog_timeout    = 500
 # Enable the anti-cache feature.
 site.anticache_enable      = false
 
+# The maximum number of SQLStmts that can be queued per batch in a transaction
+# added by hawk, for wordcount
+site.planner_max_batch_size = 5000
+
 # If set to true, then the MAP phase of a MapReduceTransaction will be executed as a distributed transaction that blocks the entire cluster. This ensures that the aggregates computed by the MAP phase reads from consistent a consistent state of the database.
 #site.mr_map_blocking       = true
