--- a/log4j.properties
+++ b/log4j.properties
@@ -26,7 +26,7 @@ log4j.logger.edu.brown.hstore.txns.LocalTransaction=INFO
 log4j.logger.edu.brown.hstore.callbacks=INFO
 log4j.logger.edu.brown.hstore.handlers=INFO
 log4j.logger.edu.brown.hstore.dispatchers=INFO
-log4j.logger.edu.brown.hstore.cmdlog.CommandLogWriter=INFO
+log4j.logger.edu.brown.hstore.cmdlog.CommandLogWriter=TRACE
 log4j.logger.edu.brown.hstore.cmdlog.CommandLogReader=TRACE
 log4j.logger.edu.brown.hstore.cmdlog.LogEntry=TRACE
 
