Multisite loading does not work for large datasets

--- a/log4j.properties
+++ b/log4j.properties
@@ -34,6 +34,10 @@ log4j.logger.edu.brown.hstore.conf=INFO
 log4j.logger.edu.brown.catalog=INFO
 log4j.logger.edu.brown.utils=INFO
 
+log4j.logger.edu.brown.benchmark.ycsb.YCSBClient=TRACE
+log4j.logger.org.voltdb.client.ClientImpl=TRACE
+log4j.logger.org.voltdb.client.Distributer=TRACE
+
 
 ## VoltDB Stuff
 log4j.logger.org.voltdb.VoltProcedure=WARN
