Minor tweaks for benchmarking on NVM emulator.

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -9,4 +9,5 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 
 fixed_size = true
 num_records = 1000000
-skew_factor = 0.75
+skew_factor = 1.5
+#loadthreads = 16
