--- a/build.xml
+++ b/build.xml
@@ -1424,7 +1424,7 @@ TEST CASES
 <target name='junitclass'
     description="Run one junit suite (i.e, -Djunitclass=TestSQLFeaturesSuite)">
 
-    <condition property="timeoutLength" value="${timeoutLength}" else='600000'>
+    <condition property="timeoutLength" value="${timeoutLength}" else='1800000'>
         <isset property="timeoutLength"/>
     </condition>
     <run_junit timeout="${timeoutLength}" printsummary="yes" showoutput="yes">
