introduced a getChildTables method in CatalogUtil. Introduced a parameter in hstore site conf to indicate if anticache-batching is on

--- a/build.xml
+++ b/build.xml
@@ -195,7 +195,7 @@
   <isset property="regressions"/>
 </condition>
 
-<condition property="junitclass" value="TestWorkloadAnalyzer">
+<condition property="junitclass" value="TestCatalogUtil2">
 	<not><isset property="junitclass"/></not>
 </condition>
 
