submmit all things related to batchid, but they are commented now

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -76,6 +76,9 @@ client.output_stream_stats = ./stream_stats.csv
 ## Site Parameters
 ## ------------------------------------------------------------
 
+# This parameter defines the number of times that it is allowed to attempt to reconnect to them
+site.network_startup_retries = 10
+
 # The amount of memory to allocate for each site (in MB)
 site.memory                 = 2048
 
