anticache evict blocks in batch method uptil the JNI bit

--- a/build.xml
+++ b/build.xml
@@ -195,7 +195,7 @@
   <isset property="regressions"/>
 </condition>
 
-<condition property="junitclass" value="TestCatalogUtil2">
+<condition property="junitclass" value="TestAntiCacheSuite">
 	<not><isset property="junitclass"/></not>
 </condition>
 
