uncomment ProcedureStatsCollector related code

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -8,6 +8,7 @@
 ## ------------------------------------------------------------
 ## Global Parameters
 ## ------------------------------------------------------------
+global.sstore = true
 
 # Temporary Directory
 # global.temp_dir = ${output.dir}/
