--- a/build.xml
+++ b/build.xml
@@ -195,7 +195,7 @@
   <isset property="regressions"/>
 </condition>
 
-<condition property="junitclass" value="TestAntiCacheManager">
+<condition property="junitclass" value="TestAntiCacheBatching">
 	<not><isset property="junitclass"/></not>
 </condition>
 
