1) passing in batchevictable parameter from command line. 2) dealing with partially fitting child tuples in a block 3) script for the articles benchmark

--- a/build.xml
+++ b/build.xml
@@ -1730,7 +1730,7 @@ TEST CASES
         <arg value="CATALOG=${catalog}" />
         <arg value="DEFERRABLE=${deferrable}" />
         <arg value="EVICTABLE=${evictable}" />
-        
+       <arg value="BATCHEVICTABLE=${batchevictable}" /> 
         <arg value="partitionplan=${partitionplan}" />
         <arg value="partitionplan.nosecondary=${partitionplan.nosecondary}" />
         <arg value="partitionplan.ignore_missing=${partitionplan.ignore_missing}" />
