Cleanup test folders

--- a/log4j.properties
+++ b/log4j.properties
@@ -11,30 +11,24 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{ABSOLUTE} [%t] (%F:%L) %-5p - %m%n
 
 ## H-Store Internals
-log4j.logger.edu.brown.hstore.HStoreSite=WARN
+log4j.logger.edu.brown.hstore.HStoreSite=INFO
 log4j.logger.edu.brown.hstore.HStoreCoordinator=INFO
-log4j.logger.edu.brown.hstore.PartitionExecutor=WARN
+log4j.logger.edu.brown.hstore.PartitionExecutor=INFO
 log4j.logger.edu.brown.hstore.TransactionInitializer=INFO
 log4j.logger.edu.brown.hstore.TransactionQueueManager=INFO
 log4j.logger.edu.brown.hstore.PartitionLockQueue=INFO
 log4j.logger.edu.brown.hstore.BatchPlanner=INFO
 log4j.logger.edu.brown.hstore.AntiCacheManager=INFO
 log4j.logger.edu.brown.hstore.txns=INFO
-log4j.logger.edu.brown.hstore.txns.DependencyInfo=INFO
 log4j.logger.edu.brown.hstore.txns.DependencyTracker=INFO
-log4j.logger.edu.brown.hstore.txns.LocalTransaction=INFO
 log4j.logger.edu.brown.hstore.callbacks=INFO
 log4j.logger.edu.brown.hstore.handlers=INFO
 log4j.logger.edu.brown.hstore.dispatchers=INFO
-log4j.logger.edu.brown.hstore.cmdlog.CommandLogWriter=INFO
-log4j.logger.edu.brown.hstore.cmdlog.CommandLogReader=TRACE
-log4j.logger.edu.brown.hstore.cmdlog.LogEntry=TRACE
+log4j.logger.edu.brown.hstore.cmdlog=INFO
 
 log4j.logger.edu.brown.hstore.conf=INFO
 log4j.logger.edu.brown.catalog=INFO
 log4j.logger.edu.brown.utils=INFO
-
-log4j.logger.edu.brown.benchmark.ycsb.YCSBClient=TRACE
 
 ## VoltDB Stuff
 log4j.logger.org.voltdb.VoltProcedure=INFO
@@ -42,17 +36,6 @@ log4j.logger.org.voltdb.VoltSystemProcedure=INFO
 log4j.logger.org.voltdb.client=INFO
 log4j.logger.org.voltdb.compiler=INFO
 log4j.logger.org.voltdb.planner=INFO
-log4j.logger.org.voltdb.sysprocs=INFO
-log4j.logger.org.voltdb.sysprocs.LoadMultipartitionTable=INFO
-log4j.logger.org.voltdb.sysprocs.SnapshotSave=WARN
-log4j.logger.org.voltdb.SnapshotSaveAPI=WARN
-log4j.logger.org.voltdb.SnapshotSiteProcessor=WARN
-log4j.logger.org.voltdb.DefaultSnapshotDataTarget=WARN
-log4j.logger.org.voltdb.sysprocs.SnapshotDelete=WARN
-log4j.logger.org.voltdb.sysprocs.SnapshotRestore=WARN
-log4j.logger.org.voltdb.sysprocs.saverestore.PartitionedTableSaveFileState=WARN
-log4j.logger.org.voltdb.sysprocs.saverestore.ReplicatedTableSaveFileState=WARN
-
 
 ## Research Projects
 log4j.logger.edu.brown.hstore.estimators=INFO
@@ -63,7 +46,6 @@ log4j.logger.edu.brown.markov=INFO
 log4j.logger.edu.brown.mappings=INFO
 log4j.logger.edu.brown.costmodel=INFO
 log4j.logger.edu.brown.designer=INFO
-log4j.logger.edu.brown.hstore.AntiCacheManager=INFO
 
 ## ----------------------------------------------------------------------------
 ## FAST LOGGING
