--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -6,8 +6,8 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 
 # If 'fixed_size' is set to true, then then the YCSBLoader will
 # only add the number of tuples defined in 'num_records'
-fixed_size = true
+fixed_size = false
 num_records = 100000
 
 # Zipfian skew factor for tuple access
-skew_factor = 1.5
+skew_factor = 0.5
