update to test recovery part... be careful -  the default.properties file is added site.aries variable setting. Please set it as fasle if you do not need it!

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -86,6 +86,13 @@ site.memory                 = 2048
 # Site Log Directory
 site.log_dir               = ${global.temp_dir}/logs/sites
 
+# Site Aries physical recovery
+site.aries                 = true
+
+site.aries_forward_only    = false
+# Site snapshot for logical recovery
+site.snapshot              = false
+
 # Site txn incoming delay 
 #site.txn_incoming_delay    = 0
 
@@ -93,10 +100,10 @@ site.log_dir               = ${global.temp_dir}/logs/sites
 #site.specexec_enable       = false
 
 # If enabled, log all transaction requests to disk 
-#site.commandlog_enable     = false
+site.commandlog_enable     = false
 
 # Timeout in milliseconds before group commit buffer flushes, if it does not fill
-#site.commandlog_timeout    = 500
+site.commandlog_timeout    = 500
 
 # Enable the anti-cache feature.
 #site.anticache_enable      = false
