set aries flag as false

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -87,7 +87,7 @@ site.memory                 = 2048
 site.log_dir               = ${global.temp_dir}/logs/sites
 
 # Site Aries physical recovery
-site.aries                 = true
+site.aries                 = false
 
 site.aries_forward_only    = false
 # Site snapshot for logical recovery
