finish recovery test for S-Store without window mechanism

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -87,11 +87,12 @@ site.memory                 = 2048
 site.log_dir               = ${global.temp_dir}/logs/sites
 
 # Site Aries physical recovery
-site.aries                 = false
+#site.aries                 = false
 
 site.aries_forward_only    = false
+
 # Site snapshot for logical recovery
-site.snapshot              = false
+#site.snapshot              = false
 
 # Site txn incoming delay 
 #site.txn_incoming_delay    = 0
