--- a/.classpath
+++ b/.classpath
@@ -37,6 +37,7 @@
 	<classpathentry kind="lib" path="third_party/java/jars/velocity-1.6.3.jar"/>
 	<classpathentry kind="lib" path="third_party/java/jars/weka-3.6.3.jar"/>
 	<classpathentry kind="lib" path="third_party/java/jars/jsr305.jar"/>
+	<classpathentry kind="lib" path="third_party/java/jars/javax.json-api-1.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="third_party/java/jars/snappy-1.0.4.jar"/>
 	<classpathentry kind="lib" path="third_party/java/jars/mysql-connector-java-5.1.18-bin.jar"/>
