--- a/build.xml
+++ b/build.xml
@@ -887,6 +887,7 @@ NATIVE EE STUFF
         <arg value="ANTICACHE_BUILD=${site.anticache_build}" />
         <arg value="ANTICACHE_REVERSIBLE_LRU=${site.anticache_reversible_lru}" />
 	<arg value="ANTICACHE_NVM=${site.anticache_nvm}" />
+	<arg value="ANTICACHE_TIMESTAMPS=${site.anticache_timestamps}" />
         <arg value="${build}" />
     </exec>
 </target>
