--- a/log4j.properties
+++ b/log4j.properties
@@ -10,6 +10,9 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{ABSOLUTE} [%t] (%F:%L) %-5p - %m%n
 
+## S-Store Internals
+log4j.logger.edu.brown.hstore.WorkflowScheduler=INFO
+
 ## H-Store Internals
 log4j.logger.edu.brown.hstore.HStoreSite=INFO
 log4j.logger.edu.brown.hstore.HStoreCoordinator=INFO
