add sstore_scheduler as config to indicate if the S-Store scheduler is enabled

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -10,6 +10,8 @@
 ## ------------------------------------------------------------
 global.sstore = true
 
+global.sstore_scheduler = false
+
 # Temporary Directory
 # global.temp_dir = ${output.dir}/
 global.temp_dir = .
